<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="punchLine">Learn. Think. Do.</string>
    <string name="address1">2465 Latham St</string>
    <string name="address2">Mountain View,</string>
    <string name="address3">CA 94043</string>
    <string name="CompanyName">Udacity</string>
    <string name="cellNo">650-555-5555</string>
    <string name="website">www.udacity.com</string>
</resources>
